
syntax = "proto3";

package trevatk.raft.v1;

option go_package = "github.com/trevatk/raft/pb/raft/v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service RaftServiceV1 {
    rpc Apply (Cmd) returns (google.protobuf.Empty) {}
    rpc Join (JoinRequest) returns (JoinResponse) {}
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc Vote (VoteRequest) returns (VoteResponse) {}
}

message Cmd {
    bytes payload = 1;
}

message LogEntry {
    uint64 index = 1;
    uint64 term = 2;
    bytes cmd = 3;
}

message JoinRequest {
    string advertise_addr = 1;
    bool voter = 2;
    uint64 commit_index = 3;
    google.protobuf.Timestamp requested_at = 4;
}

message JoinResponse {
    string assigned_id = 1;
    string leader_id = 2;
    uint64 term = 3;
    google.protobuf.Timestamp completed_at = 4;
}

message AppendEntriesRequest {
    uint64 term = 1;
    string leader_id = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    repeated LogEntry log_entries = 5;
    uint64 leader_commit = 6;
    google.protobuf.Timestamp requested_at = 7;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message VoteRequest {
    uint64 term = 1;
}

message VoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
}